--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Using Variables
-        run: echo "$NODEJS_VERSION"
-        run: echo $PR_NUMBER
-        run: node --version
+        run: |
+          echo "$NODEJS_VERSION"
+          echo $PR_NUMBER
+          node --version
 
       # - uses: actions/checkout@v2
       # - name: Use Node.js $NODEJS_VERSION
@@ -23,5 +24,5 @@ jobs:
           # npm install
       # - name: run Lighthouse CI
         # run: |
-          # npm install -g @lhci/cli@0.6.x
-          # lhci autorun
+        #   npm install -g @lhci/cli@0.6.x
+        #   lhci autorun
